
syntaxdir = $(pkgdatadir)/syntax
syntax_DATA =	extension.list \
	filename.list \
	firstline.list \
	Dark.sch \
	DarkBlue.sch \
	Gray.sch \
	syntax_awk.syn \
	syntax_batch.syn \
	syntax_conf.syn \
	syntax_cpp.syn \
	syntax_css.syn \
	syntax_diff.syn \
	syntax_html.syn \
	syntax_java.syn \
	syntax_javascript.syn \
	syntax_js_html.syn \
	syntax_jsp.syn \
	syntax_nfo.syn \
	syntax_pas.syn \
	syntax_perl.syn \
	syntax_php.syn \
	syntax_python.syn \
	syntax_reg.syn \
	syntax_ruby.syn \
	syntax_sh.syn \
	syntax_syn.syn \
	syntax_txt.syn \
	syntax_x86asm.syn \
	syntax_xml.syn \
	_COLOR_.html

EXTRA_DIST = $(syntax_DATA)
