
syntaxdir = $(pkgdatadir)/syntax
syntax_DATA =	extension.list \
	filename.list \
	firstline.list \
	Dark.sch \
	DarkBlue.sch \
	Gray.sch \
	syntax_actionscript.syn \
	syntax_angelscript.syn \
	syntax_awk.syn \
	syntax_batch.syn \
	syntax_conf.syn \
	syntax_cpp.syn \
	syntax_csharp.syn \
	syntax_css.syn \
	syntax_diff.syn \
	syntax_fortran.syn \
	syntax_html.syn \
	syntax_javascript.syn \
	syntax_java.syn \
	syntax_js_html.syn \
	syntax_jsp.syn \
	syntax_latex.syn \
	syntax_lua.syn \
	syntax_nfo.syn \
	syntax_pas.syn \
	syntax_perl.syn \
	syntax_php.syn \
	syntax_python.syn \
	syntax_reg.syn \
	syntax_ruby.syn \
	syntax_sh.syn \
	syntax_squirrel.syn \
	syntax_syn.syn \
	syntax_txt.syn \
	syntax_vbscript_asp.syn \
	syntax_visualbasic.syn \
	syntax_x86asm.syn \
	syntax_xml.syn

EXTRA_DIST = $(syntax_DATA)
